# backbone-template-v1

./: .gitignore  .oxlintrc.json  AGENTS.md  Cargo.toml  README.md  TODO.md  package.json  pnpm-workspace.yaml
.agents/skills/implement-plan/: SKILL.md
.agents/skills/review-plan/: SKILL.md
.github/workflows/: ci.yml  publish.yml
client/: .oxfmtrc.json  .oxlintrc.json  vite.config.ts  vite.ladle.config.ts
client/src/: App.tsx  design-system-components.test.tsx  main.tsx
client/src/pages/: page.ts
e2e/: .gherkin-lintrc  .oxfmtrc.json  .oxlintrc.json  playwright.config.ts  tsconfig.json  tsconfig.oxlint-plugin.json
e2e/support/: app-gherkin.ts  fixtures.ts  gherkin.test.ts  gherkin.ts  oxlint-plugin.test.ts  oxlint-plugin.ts
e2e/support/gherkin-fixtures/: extra-implementation.spec.ts  happy-path.spec.ts  missing-id.feature  missing-implementation.spec.ts  missing-step.spec.ts  scenario-outline.feature  scenario-outline.spec.ts  step-mismatch.spec.ts  valid-implementations.ts
e2e/tests/: helloworld.spec.ts
pr-slide/: README.md
pr-slide/src/: cli.js  git-context.js
pr-slide/test/: generate-pr-deck.test.js  presentation-paths.test.js  presentations.test.js
proto/helloworld/v1/: helloworld.proto
scripts/: run-e2e.sh
server/: Cargo.toml  build.rs
server/dylint/backbone_server_lints/: README.md
server/dylint/backbone_server_lints/ui/: lib.rs  long_file.rs  main.rs  main.stderr
server/migrations/: 20260520120000_create_projects.sql
server/src/: config.rs  lib.rs  state.rs
server/src/rpc/: mod.rs
server/src/rpc/greeter/: mod.rs
src/: create-backbone-template.js
template/: .env.schema  .env.test  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  _gitignore  buf.gen.yaml  pnpm-lock.yaml  pnpm-workspace.yaml
template/client/: README.md  _gitignore  index.html  package.json  tsconfig.json
template/client/src/: App.tsx
template/e2e/: _gitignore  package.json
template/pr-slide/: package.json
template/server/: Cargo.toml
template/server/dylint/backbone_server_lints/: Cargo.toml
template/server/dylint/backbone_server_lints/src/: lib.rs
template/server/dylint/backbone_server_lints/ui/: lib.stderr  long_file.stderr  main.rs  main.stderr
template/spec-engine/: Cargo.toml  README.md
template/spec-engine/src/: extractor.rs  lib.rs  main.rs  spec.rs
test/: create-backbone-template.test.js
(+39 files in other folders)
