[workspace]
members = ["server"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.metadata.dylint]
libraries = [{ path = "server/dylint/backbone_server_lints" }]

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
dbg_macro = "deny"
exit = "deny"
expect_used = "deny"
mem_forget = "deny"
missing_errors_doc = "allow"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
print_stderr = "deny"
print_stdout = "deny"
suspicious = { level = "deny", priority = -1 }
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unwrap_used = "deny"
